--- a/public/CSS/cadastro2.css
+++ b/public/CSS/cadastro2.css
@@ -79,7 +79,7 @@ Header ul {
 }
 
 .parte1 button{
-      width: 40%;
+   width: 40%;
    height: 8%;
    border-radius: 14px;
    border: 2px solid white;
@@ -114,7 +114,7 @@ Header ul {
 .formulario{
     padding-top: 17px;
     background-color: #FFFFFF;
-    height: 75%;
+    height: 70%;
     width: 70%;
     display: flex;
     align-items: center;
@@ -122,45 +122,91 @@ Header ul {
     justify-content: space-around;
 }
 
-.campo{
+.campo1{
     background-color: #FFFFFF;
     width: 100%;
-    height: 30%;
+    height: 10%;
     flex-direction: row;
-    margin-bottom: 4%;
 }
 
-.campo input{
-    width: 100%;
+.campo1 input#cep{
+    width: 50%;
     height: 100%;
     background-color: #c4c1c1;
     border: none;
 }
 
-.campo input::placeholder{
+.campo1 input#uf{
+    width: 48%;
+    height: 100%;
+    background-color: #c4c1c1;
+    border: none;
+}
+
+.campo1 input#logradouro{
+    width: 50%;
+    height: 100%;
+    background-color: #c4c1c1;
+    border: none;
+}
+
+.campo1 input#numero{
+    width: 48%;
+    height: 100%;
+    background-color: #c4c1c1;
+    border: none;
+}
+
+.campo1 input::placeholder, .campo2 input::placeholder,
+.campo3 input::placeholder{
     color: #000000;
     font-weight: bold;
   font-size: clamp( 2.5vw); /* mínimo 12px, 2.5 tamanho dinâmico, máximo 17px */
     padding-left: 10px;
 }
 
-.indicador{
+.campo2{
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 30%;
     display: flex;
-    align-items: center;
-    color: #c4c1c1;
+    flex-direction: column;
+    gap: 10%;
+}
+
+.campo2 input{
+    width: 99%;
+    height: 40%;
+    background-color: #c4c1c1;
+    border: none;
+}
+
+.campo3{
+    background-color: #FFFFFF;
+    width: 100%;
+    height:12%;
+    display: flex;
+}
+
+.campo3 input{
+    width: 99%;
+    height: 100%;
+    background-color: #c4c1c1;
+    border: none;
 }
 
 .formulario button{
    width: 30%;
-   height: 25%;
-   border-radius: 10px;
+   height: 15%;
+   border-radius: 14px;
    border: 2px solid #858484;
    background-color: white;
+   color: #646363;
    font-size: 15px;
 }
  
 button a{
-  color:#5d5d5d;
+ color:#c4c1c1;
   text-decoration: none;
   outline: none;
 }
@@ -181,6 +227,7 @@ Footer {
 }
 
 
+/* Celular (até 768px) */
 @media (max-width: 768px) {
   header {
     flex-direction: column;
@@ -213,9 +260,8 @@ Footer {
   }
 
   .parte1 button {
-     width: 60%;
-    height: 30px;
-    font-size: 16px;
+    width: 60%;
+    height: 45px;
   }
 
   .formulario {
@@ -224,15 +270,17 @@ Footer {
     gap: 15px;
   }
 
-  .campo{
+  .campo1, .campo2, .campo3 {
     flex-direction: column;
     height: auto;
     gap: 10px;
   }
 
-  .campo input {
+  .campo1 input, 
+  .campo2 input, 
+  .campo3 input {
     width: 99%;
-    height: 30px;
+    height: 35px;
   }
 
   .formulario button {
@@ -251,6 +299,7 @@ Footer {
     font-size: 14px;
   }
 }
+
 
 /* Tablet (até 1024px) */
 @media (max-width: 1024px) {
