--- a/public/CSS/login.css
+++ b/public/CSS/login.css
@@ -123,6 +123,7 @@ Header ul {
 }
 
 .campo{
+    position: relative;
     background-color: #FFFFFF;
     width: 100%;
     height: 20%;
@@ -130,11 +131,13 @@ Header ul {
 }
 
 .campo input{
-    width: 90%;
+    width: 100%;
     height: 100%;
     background-color: #c4c1c1;
     border: none;
+   
 }
+
 
 .campo input::placeholder{
     color: #000000;
@@ -412,10 +415,13 @@ footer {
         width: 70%;
         height: 100%;
         gap: 10px;
+        display: flex;
     }
 
     .campo{
         padding-left: 2px;
+        display: flex;
+        gap: 2%;
     }
 
     .campo input {
