--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
 * {
     padding: 0px;
     margin: 0px;
@@ -10,27 +12,37 @@ body {
     width: 100%;
     height: 100vh;
     background-color: #FFFFFF;
+    font-family: 'Poppins', sans-serif;
+      overflow-x: hidden;
+
+}
+
+h1, h2, h3 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500; 
+}
+
+p, a, span, input, button {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400; 
 }
 
 /* AREA DO HEADER */
 
 Header {
-    width: 100%;
-    height: 100px;
-    background-color: #00AEFF;
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    align-items: center;
-    font-size: 30px;
+  width: 100vw;
+  height: 10vh;
+  background-color: #00283a;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  align-items: center;
 }
+
 
 Header img {
     width: 300px;
-    
- 
 }
-
 
 Header ul {
     display: flex;
