--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -11,26 +11,16 @@ body {
     width: 100%;
     height: 100vh;
     background-color: #FFFFFF;
-    font-family: 'Poppins', sans-serif;
       overflow-x: hidden;
+      font-family: "Inter", sans-serif;
 
-}
-
-h1, h2, h3 {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500; 
-}
-
-p, a, span, input, button {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400; 
 }
 
 /* AREA DO HEADER */
 
 Header {
-  width: 100vw;
-  height: 10vh;
+   width: 100%;
+    height: 60px;
   background-color: #00283a;
   display: flex;
   justify-content: space-between;
@@ -310,7 +300,7 @@ main {
 }
 
 .Sessao_direita textarea {
-    background-color: #B6E6F7;
+    background-color: #ffffff;
     border: 1.5px solid;
     border-radius: 10px;
     height: 150px;
@@ -360,6 +350,7 @@ Footer {
     justify-content: center;
     align-items: center;
     margin-top: 40px;
+    font-size: 10px;
 }
 
 Footer div h1 {
@@ -367,7 +358,6 @@ Footer div h1 {
 }
 
 /* RESPONSIVIDADE */
-
 
 
 
@@ -386,7 +376,18 @@ Footer div h1 {
     }
     
     .projetos_textos {
-        gap: 20px;
+        gap: 15px;
+        
+    }
+
+     .projetos_textos h2 {
+       font-size: 30px;
+        
+
+    }
+
+     .projetos_textos p {
+        font-size: 20px;
         
     }
 }
@@ -401,7 +402,7 @@ Footer div h1 {
     }
 
      .projetos_textos p {
-        font-size: 18px;
+        font-size: 17px;
         
     }
 }
@@ -429,6 +430,17 @@ Footer div h1 {
     .projetos_textos {
         width: 85%;
     }
+
+     .projetos_textos h2 {
+       font-size: 35px;
+        
+
+    }
+
+     .projetos_textos p {
+        font-size: 20px;
+        
+    }
 }
 
 
@@ -449,15 +461,13 @@ Footer div h1 {
         margin-bottom: 400px;
     }
 
-    .projetos {
-            margin-bottom: 440px;
-    }
 
     .Sobre_Conteudo {
         flex-direction: column;
         display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 150px;
     }
 
     .Contato_conteudo{
@@ -540,7 +550,19 @@ Footer div h1 {
     width: 500px;
     color: white;
     font-size: 20px;
+    padding: 0px 40px;
 }
+
+ .projetos_textos h2 {
+       font-size: 30px;
+        
+
+    }
+
+     .projetos_textos p {
+        font-size: 18px;
+        
+    }
 }
 
 
@@ -552,6 +574,24 @@ Footer div h1 {
     }
 
     .projetos {
-            margin-bottom: 200px;
+            margin-bottom: 0px;
     }
+
+    .projetos_textos {
+        padding: 0px 10px;
+        gap: 25px;
+    }
+
+     .projetos_textos h2 {
+       font-size: 24px;
+        
+
+    }
+
+     .projetos_textos p {
+        font-size: 16px;
+        
+    }
+
+    
  }
