--- a/public/CSS/util.css
+++ b/public/CSS/util.css
@@ -1,61 +1,69 @@
-/*sidebar e header aqui*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
-    overflow-y: hidden;
+    box-sizing: border-box;
 }
+
+body {
+  font-family: 'Poppins', sans-serif;
+  background-color: #f0f2f5; /* fundo neutro para destacar a box */
+}
+
+h2 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 22px;
+  font-weight: 600;
+  text-align: center;
+}
+
+/* HEADER */
+header {
+  width: 100vw;
+  height: 10vh;
+  background-color: #00283a;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  align-items: center;
+}
+
+header img {
+  width: 150px;
+}
+
+/* SIDEBAR */
 .sidebar {
     position: fixed;
-    top: 0;
+    top: 10vh;
     right: 0;
-    height: 100%;
-    width: 70px;
-    background-color: #001A27;
+    width: 10vh;
+    height: 90vh;
+    background-color: #00283a;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 20px;
+    padding: 20px 0;
+    gap: 30px;
 }
 
-.sidebar i {
-    font-size: 30px;
-    margin: 12px 0;
-    cursor: pointer;
-    color: #fff;
+.sidebar a {
+    color: white;
+    font-size: 22px;
     display: flex;
-    align-items: center;
     justify-content: center;
-    height: 60px;
+    align-items: center;
     width: 100%;
-}
-
-.sidebar i.active {
-    background-color: #004F73;
-    font-size: 30px;
-}
-header {
-    text-align: center;
-    font-size: 28px;
-    font-weight: 700;
     padding: 10px 0;
-    color: #fff;
+    text-decoration: none;
+    transition: background 0.3s;
 }
 
-header {
-    text-align: left;
-    font-size: 28px;
-    font-weight: 700;
-    padding: 15px 0;
-    color: #fff;
-    background-color: #001A27;
-    margin-bottom: 10px;
-
-}
-
-header span {
-    margin-left: 10px;
+.sidebar a:hover,
+.sidebar a.active {
+  background-color: #005b7a; 
 }
 
 .title {
