--- a/public/CSS/util.css
+++ b/public/CSS/util.css
@@ -1,74 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-
+/*sidebar e header aqui*/
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    
 }
-
-body {
-  font-family: 'Poppins', sans-serif;
-  background-color: #f0f2f5; /* fundo neutro para destacar a box */
-}
-
-h2 {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  font-size: 22px;
-  font-weight: 600;
-  text-align: center;
-}
-
-/* HEADER */
-header {
-  width: 100vw;
-  height: 10vh;
-  background-color: #00283a;
-  display: flex;
-  justify-content: space-between;
-  padding: 20px;
-  align-items: center;
-}
-
-header img {
-  width: 150px;
-}
-
-/* SIDEBAR */
 .sidebar {
     position: fixed;
-    top: 10vh;
+    top: 0;
     right: 0;
-    width: 10vh;
-    height: 90vh;
-    background-color: #00283a;
+    height: 100%;
+    width: 70px;
+    background-color: #001A27;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px 0;
-    gap: 30px;
+    padding-top: 20px;
 }
 
-.sidebar a {
-    color: white;
-    font-size: 22px;
+.sidebar i {
+    font-size: 30px;
+    margin: 12px 0;
+    cursor: pointer;
+    color: #fff;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    height: 60px;
     width: 100%;
-    padding: 10px 0;
-    text-decoration: none;
-    transition: background 0.3s;
 }
 
-.sidebar a:hover,
-.sidebar a.active {
-  background-color: #005b7a; 
+.sidebar i.active {
+    background-color: #004F73;
+    font-size: 30px;
+}
+header {
+    text-align: center;
+    font-size: 28px;
+    font-weight: 700;
+    padding: 10px 0;
+    color: #fff;
+}
+
+header {
+    text-align: left;
+    font-size: 28px;
+    font-weight: 700;
+    padding: 15px 0;
+    color: #fff;
+    background-color: #001A27;
+    margin-bottom: 10px;
+
+}
+
+header span {
+    margin-left: 10px;
 }
 
 .title {
     text-align: center;
     font-size: 32px;
     font-weight: 800;
-    margin-bottom: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
