--- a/public/CSS/util.css
+++ b/public/CSS/util.css
@@ -6,52 +6,56 @@
     font-family: 'Poppins', sans-serif;
     
 }
-.sidebar {
+  .sidebar {
     position: fixed;
-    top: 0;
+    top: 10vh;
     right: 0;
-    height: 100%;
-    width: 70px;
-    background-color: #001A27;
+    width: 10vh;
+    height: 90vh;
+    background-color: #00283a;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 20px;
-}
+    padding: 20px 0;
+    gap: 30px;
+}  
 
-.sidebar i {
-    font-size: 30px;
-    margin: 12px 0;
-    cursor: pointer;
-    color: #fff;
+
+
+ .sidebar a {
+    color: white;
+    font-size: 25px;
     display: flex;
-    align-items: center;
     justify-content: center;
-    height: 60px;
+    align-items: center;
     width: 100%;
-}
-
-.sidebar i.active {
-    background-color: #004F73;
-    font-size: 30px;
-}
-header {
-    text-align: center;
-    font-size: 28px;
-    font-weight: 700;
     padding: 10px 0;
-    color: #fff;
+    text-decoration: none;
+    transition: background 0.3s;
+    margin-top: -5px;
 }
 
-header {
-    text-align: left;
-    font-size: 28px;
-    font-weight: 700;
-    padding: 15px 0;
-    color: #fff;
-    background-color: #001A27;
-    margin-bottom: 10px;
+.sidebar a:hover,
+.sidebar a.active {
+  background-color: #005b7a; 
+}
 
+.sidebar a:hover {
+  background-color: #005b7a; 
+} 
+
+header {
+  width: 100vw;
+  height: 10vh;
+  background-color: #00283a;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  align-items: center;
+}
+
+header img {
+  width: 150px;
 }
 
 header span {
@@ -60,8 +64,8 @@ header span {
 
 .title {
     text-align: center;
-    font-size: 32px;
+    font-size: 26px;
     font-weight: 800;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 20px;
+   
 }
