--- a/public/CSS/util.css
+++ b/public/CSS/util.css
@@ -20,8 +20,6 @@
     gap: 30px;
 }  
 
-
-
  .sidebar a {
     color: white;
     font-size: 25px;
@@ -43,6 +41,12 @@
 .sidebar a:hover {
   background-color: #005b7a; 
 } 
+
+.sidebar img{
+  width: 42px;
+  height: 37px;
+  cursor: pointer;
+}
 
 header {
   width: 100vw;
