feat: conserta a responsividade

--- a/public/CSS/cadastro.css
+++ b/public/CSS/cadastro.css
@@ -344,6 +344,9 @@ footer h1 {
     .cadastro{
       height: 85%;
     }
+    .card-cadastro{
+      overflow-y: scroll;
+    }
 
     .container {
         flex-direction: column;
