feat: adiciona tela do slack na sidebar

--- a/public/CSS/comparativos.css
+++ b/public/CSS/comparativos.css
@@ -237,6 +237,11 @@ hr {
     padding: 20px 0;
     gap: 30px;
 }  
+.sidebar img{
+  width: 42px;
+  height: 37px;
+  cursor: pointer;
+}
 
  .sidebar a {
     color: white;
